---
source: parser/tests/parser.rs
description: "\n        post /api {\n            body `{\"neet\": ${env(\"love\")}, 2: ${\"two\"}}`\n        }"
expression: ast
---
Program(
  items: [
    Request(
      method: POST,
      endpoint: Pathname(Literal(
        value: "/api",
        span: Span(
          start: Location(
            line: 1,
            col: 13,
          ),
          end: Location(
            line: 1,
            col: 17,
          ),
        ),
      )),
      params: [
        Body(
          value: TemplateSringLiteral(
            span: Span(
              start: Location(
                line: 2,
                col: 17,
              ),
              end: Location(
                line: 2,
                col: 56,
              ),
            ),
            parts: [
              String(StringLiteral(
                raw: "`{\"neet\": ",
                value: "{\"neet\": ",
                span: Span(
                  start: Location(
                    line: 2,
                    col: 17,
                  ),
                  end: Location(
                    line: 2,
                    col: 27,
                  ),
                ),
              )),
              Call(
                identifier: Identifier(
                  name: "env",
                  span: Span(
                    start: Location(
                      line: 2,
                      col: 29,
                    ),
                    end: Location(
                      line: 2,
                      col: 32,
                    ),
                  ),
                ),
                arguments: [
                  String(StringLiteral(
                    raw: "\"love\"",
                    value: "love",
                    span: Span(
                      start: Location(
                        line: 2,
                        col: 33,
                      ),
                      end: Location(
                        line: 2,
                        col: 39,
                      ),
                    ),
                  )),
                ],
              ),
              String(StringLiteral(
                raw: ", 2: ",
                value: ", 2: ",
                span: Span(
                  start: Location(
                    line: 2,
                    col: 41,
                  ),
                  end: Location(
                    line: 2,
                    col: 46,
                  ),
                ),
              )),
              String(StringLiteral(
                raw: "\"two\"",
                value: "two",
                span: Span(
                  start: Location(
                    line: 2,
                    col: 48,
                  ),
                  end: Location(
                    line: 2,
                    col: 53,
                  ),
                ),
              )),
              String(StringLiteral(
                raw: "}`",
                value: "}",
                span: Span(
                  start: Location(
                    line: 2,
                    col: 54,
                  ),
                  end: Location(
                    line: 2,
                    col: 56,
                  ),
                ),
              )),
            ],
          ),
          start: Location(
            line: 2,
            col: 12,
          ),
        ),
      ],
      span: Span(
        start: Location(
          line: 1,
          col: 8,
        ),
        end: Location(
          line: 2,
          col: 56,
        ),
      ),
    ),
  ],
)
